{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 43,
  "lineage": "242446b3-3305-91b6-402f-12fa9aef3cde",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_server_nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-01-nic",
            "ip_configuration": [
              {
                "name": "web-01-ip",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-01-public-ip",
                "subnet_id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet"
              }
            ],
            "location": "uksouth",
            "name": "web-01-nic",
            "network_security_group_id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-01-nsg",
            "private_ip_address": "1.0.1.4",
            "private_ip_addresses": [
              "1.0.1.4"
            ],
            "resource_group_name": "web-rg"
          },
          "depends_on": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_public_ip.web_server_public_ip",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-01-nsg",
            "location": "uksouth",
            "name": "web-01-nsg",
            "resource_group_name": "web-rg",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_rdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-01-nsg/securityRules/RDP Inbound",
            "name": "RDP Inbound",
            "network_security_group_name": "web-01-nsg",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "web-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-01-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "web-01-public-ip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet",
            "name": "web-server-subnet",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/91fd4f00-1757-4e21-8775-66b4289e6da3/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet",
            "location": "uksouth",
            "name": "web-server-vnet",
            "resource_group_name": "web-rg"
          },
          "depends_on": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}